<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/meters70"
              android:title="@string/meters70" />
        <item android:id="@+id/meters100"
              android:title="@string/meters100" />
        <item android:id="@+id/meters200"
              android:title="@string/meters200" />
        <item android:id="@+id/meters500"
              android:title="@string/meters500" />
        <item android:id="@+id/meters800"
              android:title="@string/meters800" />
        <item android:id="@+id/meters1000"
              android:title="@string/meters1000" />
        <item android:id="@+id/meters1500"
              android:title="@string/meters1500" />
        <item android:id="@+id/meters2000"
              android:title="@string/meters2000" />
        <item android:id="@+id/meters3000"
              android:title="@string/meters3000" />
        <item android:id="@+id/meters5000"
              android:title="@string/meters5000" />
    </group>
</menu>