<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    android:padding="6dip"
	    >
	    
	    <ImageView
	        android:id="@+id/aroundme_icon"
			android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginRight="5dip"
	        android:src="@drawable/ic_launcher_tourist"
	    />
	    

		<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="fill_parent" 
		    android:text="@string/hello"
		    android:textSize="16sp"
		    android:textStyle="bold"
		    android:layout_weight="1"
		    android:gravity="center_vertical"
		    android:layout_marginLeft="1px"
		    android:layout_marginRight="1px"
	    />
	    
	    <Button
	    	android:id="@+id/btnRange"
	    	android:layout_width="wrap_content"
	    	android:layout_height="67px"
	    	android:text="@string/radius"
	    	android:textSize="16sp"
	    	android:textStyle="bold"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:layout_marginLeft="1px"
		    android:layout_marginRight="1px"
	    />
	    
	    <Button
	    	android:layout_width="77px"
	    	android:layout_height="67px"
	    	android:text="@string/map"
	    	android:textSize="16sp"
	    	android:textStyle="bold"
	    	android:layout_weight="1"
		    android:gravity="center"
		    android:layout_marginLeft="1px"
		    
	    />
	    
	</LinearLayout>
	
	<ListView android:id="@+id/android:list"
          	android:layout_width="fill_parent"
        	android:layout_height="match_parent"
        	android:background="@layout/roundshape"
        	android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:cacheColorHint="#ffffffff"
        	/>
	
</LinearLayout>